Bug 152906 - Text adjust to contour broken in recent draw/impress
Summary: Text adjust to contour broken in recent draw/impress
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.2.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords: bibisected, bisected, regression
: 155264 (view as bug list)
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2023-01-06 19:01 UTC by Callegar
Modified: 2024-06-08 06:05 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document showing the issue (14.70 KB, application/vnd.oasis.opendocument.graphics)
2023-01-08 18:43 UTC, Callegar
Details
tdf#152906 text adjust to contour Draw--Impress.png (297.59 KB, image/png)
2024-06-07 13:06 UTC, Piotr Osada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Callegar 2023-01-06 19:01:09 UTC
Description:
In the past, setting text properties to "adjust to contour" used to let you shape a piece of text according to a shape, for instance as a circle.

This functionality seems broken as of Libo 7.4.

Steps to Reproduce:
1. Open Draw
2. Draw a circle
3. Select the circle and then do Format -> Text Attributes -> Adjust to contour
4. Still with the circle selected press F2 to enter some text
5. Enter some text

Actual Results:
Text gets shaped as a thin rectangle inside the circle

Expected Results:
Text should get wrapped to fill the circle


Reproducible: Always


User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: DrawingDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Comment 1 Callegar 2023-01-06 19:04:55 UTC
Also broken in 7.3. But almost sure it used to work in the past (maybe OO?)
Comment 2 m_a_riosv 2023-01-08 14:21:14 UTC
Please can you attach a sample file.
Comment 3 Callegar 2023-01-08 18:43:13 UTC
Created attachment 184530 [details]
Sample document showing the issue
Comment 4 QA Administrators 2023-01-09 03:21:19 UTC Comment hidden (obsolete)
Comment 5 raal 2023-01-11 17:27:29 UTC
This seems to have begun at the below commit.
Adding Cc: to Mike Kaganski ; Could you possibly take a look at this one?
Thanks
 9e32fc1ef5cc59773526f1f9e7cb09405c32999f is the first bad commit
commit 9e32fc1ef5cc59773526f1f9e7cb09405c32999f
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jun 8 15:35:13 2021 +0200

    source d0a1616ccad0dd5f5a02c1b0204f537b57d0b4b5

https://gerrit.libreoffice.org/c/core/+/116034
Comment 6 m_a_riosv 2023-05-12 23:07:57 UTC
*** Bug 155264 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2024-05-03 16:44:39 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d0987564c33bbccc9b58e041d106c6caf7686a3

tdf#152906: use correct Y offset

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-05-06 13:45:12 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9f5664f4d34e8f04cc18dc252cad4b3b853db882

tdf#152906: use correct Y offset

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Piotr Osada 2024-06-07 13:06:45 UTC
Created attachment 194589 [details]
tdf#152906 text adjust to contour Draw--Impress.png

Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 8; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: threaded

Confirm: it's fixed.